--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -685,7 +685,8 @@ proc initInterpCommands {itrp fresh aliasesVN aliasesPassArgVN tracesVN\
             if {$alias ni {report reportDebug reportError reportWarning\
                reportCmdTrace raiseErrorCount reportInternalBug\
                formatErrStackTrace isVerbosityLevel modulefile-content\
-               modulerc-content modulefile-invalid limited-access-file}} {
+               modulerc-content modulefile-invalid limited-access-file\
+               limited-access-directory}} {
                interp eval $itrp [list trace add execution $alias enter\
                   reportTraceExecEnter]
             }
