ts: optionally build cache files to run tests
When TESTSUITE_ENABLE_MODULECACHE environment variable is set, cache
file is built for all modulepaths of the testsuite. Tests are run using
the cache files to resolve available modules.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -121,6 +121,7 @@ task:
     LC_ALL: C
     TEST_SPECIFIC_CONFIG: install-testmodspath-wild
     EXTRATEST_SOURCESH: y
+    TESTSUITE_ENABLE_MODULECACHE: 1
   container:
     image: ubuntu:focal
     cpu: 1
