--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -181,6 +181,7 @@ jobs:
       COVERAGE_MULTILIB: y
       EXTRA_SCRIPT_PRETEST: make install-testsiteconfig-1 && export TESTSUITE_ENABLE_SITECONFIG=1
       EXTRA_SCRIPT_POSTTEST: unset TESTSUITE_ENABLE_SITECONFIG
+      TESTSUITE_ENABLE_MODULECACHE: 1
     steps:
       - uses: actions/checkout@v3
         with:
