Add extra match search process
Update getModules procedure to insert extra match search at phase 3.
filterExtraMatchSearch procedure codes the extra match search process.

As a start, all modules in result are evaluated in scan mode.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2684,7 +2684,17 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
       }
    }
 
-   # Phase #3: elaborate directory content with default element selection
+   # Phase #3: perform extra match search
+
+   if {[isExtraMatchSearchRequired $mod]} {
+      filterExtraMatchSearch $mod found_list
+   }
+
+   # Phase #4: elaborate directory content with default element selection
+
+   # ensure modEqStatic is defined as expected (could have been redefined
+   # during scan evaluation occurring during previous phase
+   defineModEqStaticProc $icase [getConf extended_default] $mod
 
    array set dir_list {}
    array set autosym_list {}
@@ -2747,7 +2757,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
       }
    }
 
-   # Phase #4: filter results to keep those matching search query
+   # Phase #5: filter results to keep those matching search query
 
    # define module name and version comparison procs
    defineDoesModMatchAtDepthProc $indepth $querydepth $mtest
@@ -2940,7 +2950,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
       }
    }
 
-   # Phase #5: consolidate tags set for retained modules
+   # Phase #6: consolidate tags set for retained modules
 
    if {[currentState commandname] eq {avail}} {
       # load tags from loaded modules in the global structure prior collecting
