Configure scan evaluation mode for modulefile
Add scan evaluation mode for modulefile. It will analyzes modulefile
content for extra match search process.

To define environment variable in modulefile context during evaluation,
use whatis-variant of environment variable edition modulefile commands.

Setup first specific scan-variant of a modulefile command with
variant-sc procedure. Reuse code from whatis-variant to initialize
variant value in environment when evaluating modulefile. Also gather
variant definition for modules in a global array structure.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -99,49 +99,50 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
 
       # list of alias commands whose target procedure is adapted according to
       # the evaluation mode
-      set ::g_modfileEvalModes {load unload display help test whatis refresh}
+      set ::g_modfileEvalModes {load unload display help test whatis refresh\
+         scan}
       ##nagelfar ignore #41 Too long line
       array set g_modfilePerModeAliases {
-add-property   {nop            nop            nop            nop            nop            nop            nop         }
-always-load    {always-load    nop            reportCmd      nop            nop            nop            nop         }
-append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop         }
-chdir          {chdir          nop            reportCmd      nop            nop            nop            nop         }
-complete       {complete       complete-un    reportCmd      nop            nop            nop            complete    }
-conflict       {conflict       nop            reportCmd      nop            nop            nop            nop         }
-depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop         }
-extensions     {nop            nop            nop            nop            nop            nop            nop         }
-family         {family         family-un      reportCmd      nop            nop            nop            nop         }
-module         {module         module         reportCmd      nop            nop            nop            nop         }
-module-alias   {module-alias   module-alias   module-alias   module-alias   module-alias   module-alias   nop         }
-module-log     {nimp           nimp           reportCmd      nop            nop            nop            nop         }
-module-trace   {nimp           nimp           reportCmd      nop            nop            nop            nop         }
-module-user    {nimp           nimp           reportCmd      nop            nop            nop            nop         }
-module-verbosity {nimp         nimp           reportCmd      nop            nop            nop            nop         }
-module-version {module-version module-version module-version module-version module-version module-version nop         }
-module-virtual {module-virtual module-virtual module-virtual module-virtual module-virtual module-virtual nop         }
-module-forbid  {module-forbid  module-forbid  module-forbid  module-forbid  module-forbid  module-forbid  nop         }
-module-hide    {module-hide    module-hide    module-hide    module-hide    module-hide    module-hide    nop         }
-module-tag     {module-tag     module-tag     module-tag     module-tag     module-tag     module-tag     nop         }
-module-whatis  {nop            nop            reportCmd      nop            nop            module-whatis  nop         }
-prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop         }
-prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop         }
-prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop         }
-prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop         }
-pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop         }
-remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop         }
-remove-property {nop           nop            nop            nop            nop            nop            nop         }
-require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop         }
-set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias   }
-set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function}
-setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop         }
-source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh   }
-system         {system         system         reportCmd      nop            nop            nop            nop         }
-uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop         }
-unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop         }
-unset-function {unset-function nop            reportCmd      nop            nop            nop            nop         }
-unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop         }
-variant        {variant        variant        variant        variant        variant        variant-wh     variant     }
-x-resource     {x-resource     x-resource     reportCmd      nop            nop            nop            nop         }
+add-property   {nop            nop            nop            nop            nop            nop            nop          nop         }
+always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          nop         }
+append-path    {append-path    append-path-un append-path    append-path    append-path    edit-path-wh   nop          edit-path-wh}
+chdir          {chdir          nop            reportCmd      nop            nop            nop            nop          nop         }
+complete       {complete       complete-un    reportCmd      nop            nop            nop            complete     nop         }
+conflict       {conflict       nop            reportCmd      nop            nop            nop            nop          nop         }
+depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
+family         {family         family-un      reportCmd      nop            nop            nop            nop          nop         }
+module         {module         module         reportCmd      nop            nop            nop            nop          nop         }
+module-alias   {module-alias   module-alias   module-alias   module-alias   module-alias   module-alias   nop          nop         }
+module-log     {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
+module-trace   {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
+module-user    {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
+module-verbosity {nimp         nimp           reportCmd      nop            nop            nop            nop          nop         }
+module-version {module-version module-version module-version module-version module-version module-version nop          nop         }
+module-virtual {module-virtual module-virtual module-virtual module-virtual module-virtual module-virtual nop          nop         }
+module-forbid  {module-forbid  module-forbid  module-forbid  module-forbid  module-forbid  module-forbid  nop          nop         }
+module-hide    {module-hide    module-hide    module-hide    module-hide    module-hide    module-hide    nop          nop         }
+module-tag     {module-tag     module-tag     module-tag     module-tag     module-tag     module-tag     nop          nop         }
+module-whatis  {nop            nop            reportCmd      nop            nop            module-whatis  nop          nop         }
+prepend-path   {prepend-path   prepend-path-un prepend-path  prepend-path   prepend-path   edit-path-wh   nop          edit-path-wh}
+prereq-all     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+prereq-any     {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+prereq         {prereqAnyModfileCmd  nop      reportCmd      nop            nop            nop            nop          nop         }
+pushenv        {pushenv        pushenv-un     pushenv        pushenv        pushenv        pushenv-wh     nop          pushenv-wh  }
+remove-path    {remove-path    remove-path-un remove-path    remove-path    remove-path    edit-path-wh   nop          edit-path-wh}
+remove-property {nop           nop            nop            nop            nop            nop            nop          nop         }
+require-fullname {require-fullname nop        reportCmd      nop            nop            nop            nop          nop         }
+set-alias      {set-alias      set-alias-un   reportCmd      nop            nop            nop            set-alias    nop         }
+set-function   {set-function   set-function-un reportCmd     nop            nop            nop            set-function nop         }
+setenv         {setenv         setenv-un      setenv         setenv         setenv         setenv-wh      nop          setenv-wh   }
+source-sh      {source-sh      source-sh-un   source-sh-di   nop            nop            nop            source-sh    nop         }
+system         {system         system         reportCmd      nop            nop            nop            nop          nop         }
+uncomplete     {uncomplete     nop            reportCmd      nop            nop            nop            nop          nop         }
+unset-alias    {unset-alias    nop            reportCmd      nop            nop            nop            nop          nop         }
+unset-function {unset-function nop            reportCmd      nop            nop            nop            nop          nop         }
+unsetenv       {unsetenv       unsetenv-un    unsetenv       unsetenv       unsetenv       unsetenv-wh    nop          unsetenv-wh }
+variant        {variant        variant        variant        variant        variant        variant-wh     variant      variant-sc  }
+x-resource     {x-resource     x-resource     reportCmd      nop            nop            nop            nop          nop         }
       }
    }
 
