Add variant value to avail_{,terse_}output config
Add the ability to report defined variants on avail regular or terse
output. Variant report is updated to output all possible values in the
name=value1,value2,... form. This form also applies to boolean variant
with on,off as possible values.

Fixes #407

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -70,9 +70,9 @@ array set g_config_defs [list\
    auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 {0 1}}\
    avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 {0 1}}\
    avail_output {MODULES_AVAIL_OUTPUT {@availoutput@} 0 {modulepath alias\
-      dirwsym sym tag key} {} {} eltlist}\
+      dirwsym sym tag key variant} {} {} eltlist}\
    avail_terse_output {MODULES_AVAIL_TERSE_OUTPUT {@availterseoutput@} 0\
-      {modulepath alias dirwsym sym tag key} {} {} eltlist}\
+      {modulepath alias dirwsym sym tag key variant} {} {} eltlist}\
    cache_buffer_bytes {MODULES_CACHE_BUFFER_BYTES 32768 0 {4096 1000000} {}\
       {} intbe}\
    cache_expiry_secs {MODULES_CACHE_EXPIRY_SECS 0 0 {0 31536000} {} {} intbe}\
